modified text and fixed some spacing issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -126,6 +126,7 @@ input[type="text"],
 input[type="color"],
 input[type="range"] {
   font-family: inherit;
+  font-size: 1rem;
   color: var(--text-color);
   background: var(--background-color);
   border: 2px solid var(--border-color);
